2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by W. Trevor King:
	patch #7826 Add ATMega32u4 support to the led-blinking demo
	* doc/examples/demo/iocompat.h: Add ATmega32U4
	* doc/examples/demo/Makefile: (Dito.)

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stefan Kristiansson:
	patch #7910 Add missing PCINT2_vect to iotn40.h and update
	all the following vector numbers
	* include/avr/iotn40.h: Add PCINT2_vect, and shift all
	subsequent (misplaced) vectors; rename ADC_ADC_vect into
	ADC_vect to match the datasheet.

2013-05-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/tools-install.dox: Drop references to FreeBSD's
	CVSweb, as it's no longer maintained.  Add a comment that the
	historically available per-language GCC source files are no
	longer available, starting with GCC 4.7.

2013-05-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Crawford:
	patch #7909 Adding __volatile__ to __asm__ within pgmspace header
	* include/avr/pgmspace.h: Make all __asm__ statements
	volatile.

2013-04-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add IO symbol definitions to crt*.o files:
	* configure.ac: add crt1/iosym/Makefile to the build
	* devtools/ioreg.pl: Emit a DIE for uint32_t if needed.
	* devtools/generate_iosym.sh: New file.
	* devtools/Device.am (AVRLIB_ASFLAGS): Pass name of iosym/*.S
	include file as a -D option when compiling gcrt1.o.
	* crt1/gcrt1.S: Include IOSYMFILE
	* crt1/Makefile.am (SUBDIRS, DIST_SUBDIRS): add "iosym"
	* crt1/iosym: New directory.
	* crt1/iosym/Makefile.am: New file.
	* crt1/iosym/template.S: Empty template to use for devices where
	there is no actual IO symbol definition file.
	* crt1/iosym/at43usb320.S: New file.
	* crt1/iosym/at43usb355.S: (Dito.)
	* crt1/iosym/at76c711.S: (Dito.)
	* crt1/iosym/at86rf401.S: (Dito.)
	* crt1/iosym/at90c8534.S: (Dito.)
	* crt1/iosym/at90can128.S: (Dito.)
	* crt1/iosym/at90can32.S: (Dito.)
	* crt1/iosym/at90can64.S: (Dito.)